k8s/apps/backend/production/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        kubernetes.azure.com/scalesetpriority: spot
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      containers:
        - name: backend
          image: acr2poiclyh4krxy.azurecr.io/expensy-backend:latest
          ports:
            - containerPort: 8706
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/expenses
              port: 8706
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/expenses
              port: 8706
            initialDelaySeconds: 20
            periodSeconds: 10
  strategy:
    canary:
      canaryService: backend-canary
      stableService: backend
      steps:
        - setWeight: 20
        - pause: {duration: 5m}
#        - analysis:
#            templates:
#              - templateName: canary-analysis
        - setWeight: 60
        - pause: {duration: 5m}
#        - analysis:
#            templates:
#              - templateName: canary-analysis
        - setWeight: 100
