k8s/apps/backend/production/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: production
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8706
      targetPort: 8706
  type: ClusterIP
